# curl-cpp-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  urls.txt
include/: AsioEventEngine.hpp  Common.hpp  CurlTask.hpp  FileDownloadJob.hpp  IDownloadJob.hpp  IEventEngine.hpp  MultiCurl.hpp  SocketTracker.hpp
src/: AsioEventEngine.cpp  CurlTask.cpp  FileDownloadJob.cpp  MultiCurl.cpp  main.cpp
test/: download_test.cpp
